[gd_scene load_steps=26 format=3 uid="uid://b20lk27si2cq4"]

[ext_resource type="FontFile" path="res://Assets2D/Fonts/UIStats.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://c31n8qoq1b5qu" path="res://Assets2D/UI/iconMenu.png" id="2"]
[ext_resource type="PackedScene" path="res://MGF Scene/Setup/BGSetup.tscn" id="3"]
[ext_resource type="PackedScene" path="res://MGF Scene/QuickMatch/TeamShow.tscn" id="4"]
[ext_resource type="Theme" uid="uid://doboha45rdjnj" path="res://Assets2D/Fonts/ThemeInfo.tres" id="5"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIP.tres" id="6"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="7"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIN.tres" id="8"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUICP.tres" id="9"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUICN.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://dcf8vhh2mshf8" path="res://Assets2D/UI/iconBall.png" id="11"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamA.tres" id="12"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamB.tres" id="13"]
[ext_resource type="Texture2D" uid="uid://djrdf3ktv5iih" path="res://Assets2D/UI/iconTime.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dtpsy7aosmfgw" path="res://Assets2D/UI/iconStadium.png" id="15"]
[ext_resource type="Script" path="res://MGF Scene/QuickMatch/QuickMatch.gd" id="16"]
[ext_resource type="Texture2D" uid="uid://c4wjvoptafy8v" path="res://Assets2D/UI/IconLock.png" id="17"]
[ext_resource type="PackedScene" uid="uid://sqpoj82ew1hc" path="res://MGF Scene/Setup/HomeButton.tscn" id="18"]
[ext_resource type="Script" path="res://MGF Scene/AssetsScene3D/Button.gd" id="19"]
[ext_resource type="Texture2D" uid="uid://bq0ponx4ifp0u" path="res://Assets2D/UI/iconFormation.png" id="20"]
[ext_resource type="Texture2D" uid="uid://bbki8texicggy" path="res://Assets2D/UI/IconHome.png" id="21"]
[ext_resource type="PackedScene" path="res://MGF Scene/QuickMatch/TeamList.tscn" id="22"]
[ext_resource type="PackedScene" path="res://MGF Scene/Setup/ButtonClose.tscn" id="27"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGNBlack.tres" id="28"]
[ext_resource type="Script" path="res://MGF Scene/QuickMatch/MatchOptions.gd" id="29"]

[node name="QuickMatch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16")

[node name="BGSetup" parent="." instance=ExtResource("3")]
anchors_preset = 0

[node name="MainUI" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -414.0
offset_right = 192.0
offset_bottom = 414.0
theme_override_constants/separation = 18

[node name="Control" type="Control" parent="MainUI"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="GameMode" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
alignment = 1

[node name="OptionButtonSetGameMode" type="Button" parent="MainUI/GameMode"]
custom_minimum_size = Vector2(220, 72)
layout_mode = 2
theme = ExtResource("5")
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
text = "GameMode"
icon = ExtResource("2")
expand_icon = true

[node name="TeamSelect" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TeamA" parent="MainUI/TeamSelect" instance=ExtResource("4")]
custom_minimum_size = Vector2(104, 104)
layout_mode = 2
theme_override_styles/normal = ExtResource("12")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("12")
theme_override_styles/focus = ExtResource("12")

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/TeamSelect"]
layout_mode = 2
alignment = 1

[node name="SetTeamRandom" type="Button" parent="MainUI/TeamSelect/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("9")
text = "VS"

[node name="TeamB" parent="MainUI/TeamSelect" instance=ExtResource("4")]
custom_minimum_size = Vector2(104, 104)
layout_mode = 2
theme_override_styles/normal = ExtResource("13")
theme_override_styles/hover = ExtResource("13")
theme_override_styles/pressed = ExtResource("13")
theme_override_styles/disabled = ExtResource("13")
theme_override_styles/focus = ExtResource("13")
teamSelect = "teamID2"

[node name="SetPlay" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SetHomeAway" type="Button" parent="MainUI/SetPlay"]
custom_minimum_size = Vector2(230, 52)
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("9")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("9")
text = "Play Home"
icon = ExtResource("21")
expand_icon = true

[node name="TeamStats" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
alignment = 1

[node name="TeamStats" type="Panel" parent="MainUI/TeamStats"]
custom_minimum_size = Vector2(230, 117)
layout_mode = 2
theme_override_styles/panel = ExtResource("8")

[node name="TeamAStats" type="ItemList" parent="MainUI/TeamStats/TeamStats"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -51.5
offset_right = 115.0
offset_bottom = 52.5
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
theme_override_constants/icon_margin = 0
theme_override_constants/line_separation = 0
select_mode = 1
max_columns = 4

[node name="teamOve" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.75
anchor_top = 0.0769231
anchor_right = 2.5
anchor_bottom = 0.451923
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
theme_override_fonts/font = ExtResource("1")
text = "0"

[node name="teamAtk" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.75
anchor_top = 0.307692
anchor_right = 2.5
anchor_bottom = 0.721154
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamMid" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.75
anchor_top = 0.538462
anchor_right = 2.5
anchor_bottom = 0.951923
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamDef" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.75
anchor_top = 0.769231
anchor_right = 2.5
anchor_bottom = 1.18269
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamOve2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.0769231
anchor_right = 1.91667
anchor_bottom = 0.451923
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
theme_override_fonts/font = ExtResource("1")
text = "AVG"

[node name="teamDef2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.307692
anchor_right = 1.91667
anchor_bottom = 0.721154
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "ATK
"

[node name="teamMid2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.538462
anchor_right = 1.91667
anchor_bottom = 1.17308
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 10.5
theme_override_fonts/font = ExtResource("1")
text = "MID

"

[node name="teamFor2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamAStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.769231
anchor_right = 1.91667
anchor_bottom = 1.40385
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 10.5
theme_override_fonts/font = ExtResource("1")
text = "DEF

"

[node name="TeamBStats" type="ItemList" parent="MainUI/TeamStats/TeamStats"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -51.5
offset_bottom = 52.5
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
theme_override_constants/icon_margin = 0
theme_override_constants/line_separation = 0
select_mode = 1
max_columns = 4

[node name="teamOve" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.0769231
anchor_right = 1.91667
anchor_bottom = 0.451923
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
theme_override_fonts/font = ExtResource("1")
text = "0"

[node name="teamAtk" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.307692
anchor_right = 1.91667
anchor_bottom = 0.721154
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamMid" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.538462
anchor_right = 1.91667
anchor_bottom = 0.951923
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamDef" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.166667
anchor_top = 0.769231
anchor_right = 1.91667
anchor_bottom = 1.18269
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "0
"

[node name="teamOve2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.583333
anchor_top = 0.0769231
anchor_right = 2.33333
anchor_bottom = 0.490385
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "AVG
"

[node name="teamDef2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.583333
anchor_top = 0.307692
anchor_right = 2.33333
anchor_bottom = 0.721154
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 5.5
theme_override_fonts/font = ExtResource("1")
text = "ATK
"

[node name="teamMid2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.583333
anchor_top = 0.538462
anchor_right = 2.33333
anchor_bottom = 1.17308
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = 10.5
theme_override_fonts/font = ExtResource("1")
text = "MID

"

[node name="teamFor2" type="Label" parent="MainUI/TeamStats/TeamStats/TeamBStats"]
layout_mode = 0
anchor_left = 0.583333
anchor_top = 0.769231
anchor_right = 2.33333
anchor_bottom = 1.34615
offset_left = -4.0
offset_top = -4.5
offset_right = -4.0
offset_bottom = -4.5
theme_override_fonts/font = ExtResource("1")
text = "DEF
"

[node name="Time" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
alignment = 1

[node name="OptionButtonSetTime" type="Button" parent="MainUI/Time"]
custom_minimum_size = Vector2(230, 80)
layout_mode = 2
theme = ExtResource("5")
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
text = "Time"
icon = ExtResource("14")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="MainUI/Time/OptionButtonSetTime"]
modulate = Color(1, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17")
expand_mode = 1
stretch_mode = 5

[node name="Stadium" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
alignment = 1

[node name="OptionButtonSetStadium" type="Button" parent="MainUI/Stadium"]
custom_minimum_size = Vector2(230, 80)
layout_mode = 2
theme = ExtResource("5")
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
text = "Stadium"
icon = ExtResource("15")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="MainUI/Stadium/OptionButtonSetStadium"]
modulate = Color(1, 0, 0, 0.392157)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17")
expand_mode = 1
stretch_mode = 5

[node name="Start" type="HBoxContainer" parent="MainUI"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="MainUI/Start"]
custom_minimum_size = Vector2(230, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
text = "Start"
icon = ExtResource("11")
expand_icon = true

[node name="TeamASelect" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -616.0
offset_top = -294.0
offset_right = -192.0
offset_bottom = 328.0
theme_override_constants/separation = 30
alignment = 1

[node name="TeamList" parent="TeamASelect" instance=ExtResource("22")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TeamASelect"]
layout_mode = 2
alignment = 1

[node name="Formation1" type="Button" parent="TeamASelect/HBoxContainer"]
custom_minimum_size = Vector2(230, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
icon = ExtResource("20")
icon_alignment = 1
expand_icon = true
script = ExtResource("19")

[node name="TeamBSelect" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -294.0
offset_right = 616.0
offset_bottom = 328.0
theme_override_constants/separation = 30
alignment = 1

[node name="TeamList" parent="TeamBSelect" instance=ExtResource("22")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TeamBSelect"]
layout_mode = 2
alignment = 1

[node name="Formation2" type="Button" parent="TeamBSelect/HBoxContainer"]
custom_minimum_size = Vector2(230, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("8")
theme_override_styles/hover = ExtResource("6")
theme_override_styles/pressed = ExtResource("6")
theme_override_styles/disabled = ExtResource("8")
theme_override_styles/focus = ExtResource("6")
icon = ExtResource("20")
icon_alignment = 1
expand_icon = true
script = ExtResource("19")

[node name="Home" parent="." instance=ExtResource("18")]
layout_mode = 1

[node name="MatchOptions" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("28")
script = ExtResource("29")

[node name="GridContainer" type="GridContainer" parent="MatchOptions"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -254.0
offset_right = 600.0
offset_bottom = 326.0
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 60
columns = 3

[node name="ButtonClose" parent="MatchOptions" instance=ExtResource("27")]
layout_mode = 1
anchors_preset = 1
offset_left = -128.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 128.0
grow_horizontal = 0

[connection signal="pressed" from="MainUI/GameMode/OptionButtonSetGameMode" to="." method="_on_OptionButtonSetGameMode_pressed"]
[connection signal="pressed" from="MainUI/TeamSelect/VBoxContainer/SetTeamRandom" to="." method="_on_SetTeamRandom_pressed"]
[connection signal="pressed" from="MainUI/SetPlay/SetHomeAway" to="." method="_on_SetHomeAway_pressed"]
[connection signal="pressed" from="MainUI/Time/OptionButtonSetTime" to="." method="_on_OptionButtonSetTime_pressed"]
[connection signal="pressed" from="MainUI/Stadium/OptionButtonSetStadium" to="." method="_on_OptionButtonSetStadium_pressed"]
[connection signal="pressed" from="MainUI/Start/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="TeamASelect/HBoxContainer/Formation1" to="TeamASelect/HBoxContainer/Formation1" method="_on_Formation1_pressed"]
[connection signal="pressed" from="TeamBSelect/HBoxContainer/Formation2" to="TeamBSelect/HBoxContainer/Formation2" method="_on_Formation2_pressed"]
[connection signal="pressed" from="MatchOptions/ButtonClose" to="MatchOptions" method="_on_ButtonClose_pressed"]
