[gd_scene load_steps=6 format=2]

[ext_resource path="res://MGF Scene/AssetsScene3D/Button.gd" type="Script" id=1]
[ext_resource path="res://Assets2D/Theme/btnRedP.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets2D/Theme/btnRedN.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets2D/Fonts/UI.tres" type="FontFile" id=7]
[ext_resource path="res://Assets2D/UI/IconHome.png" type="Texture2D" id=8]




[node name="MainButton" type="Control"]
anchor_left = 1.0
anchor_right = 1.0

[node name="Home" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource( 7 )
theme_override_styles/hover = ExtResource( 5 )
theme_override_styles/pressed = ExtResource( 5 )
theme_override_styles/focus = ExtResource( 5 )
theme_override_styles/disabled = ExtResource( 6 )
theme_override_styles/normal = ExtResource( 6 )
icon = ExtResource( 8 )
icon_alignment = 1
expand_icon = true
script = ExtResource( 1 )

[connection signal="pressed" from="Home" to="Home" method="_on_Home_pressed"]
